--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,10 @@
 
         <activity android:name=".controllers.AppActivity" />
         <activity android:name=".controllers.RegistrationActivity" />
-        <activity android:name=".controllers.LoginActivity"></activity>
+        <activity android:name=".controllers.LoginActivity" />
+        <activity android:name=".controllers.AdminActivity" />
+        <activity android:name=".controllers.LocalEmployeeActivity" />
+        <activity android:name=".controllers.ManagerActivity"></activity>
     </application>
 
 </manifest>
