--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,8 @@
         <activity android:name=".controllers.LoginActivity" />
         <activity android:name=".controllers.AdminActivity" />
         <activity android:name=".controllers.LocalEmployeeActivity" />
-        <activity android:name=".controllers.ManagerActivity"></activity>
+        <activity android:name=".controllers.ManagerActivity" />
+        <activity android:name=".controllers.LocationListActivity"></activity>
     </application>
 
 </manifest>
