--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,8 @@
         <activity android:name=".controllers.AdminActivity" />
         <activity android:name=".controllers.LocalEmployeeActivity" />
         <activity android:name=".controllers.ManagerActivity" />
-        <activity android:name=".controllers.LocationListActivity"></activity>
+        <activity android:name=".controllers.LocationListActivity" />
+        <activity android:name=".controllers.LocationDetailsActivity"></activity>
     </application>
 
 </manifest>
