--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,8 @@
         <activity android:name=".controllers.LocationListActivity" />
         <activity android:name=".controllers.LocationDetailsActivity" />
         <activity android:name=".model.CSVFileReaderActivity" />
-        <activity android:name=".controllers.AddDonationActivity"></activity>
+        <activity android:name=".controllers.AddDonationActivity" />
+        <activity android:name=".controllers.ItemDetailsActivity"></activity>
     </application>
 
 </manifest>
