--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "team1.gatech.edu.irp"
         minSdkVersion 17
         targetSdkVersion 17
-        versionCode 1
-        versionName "1.0"
+        versionCode 8
+        versionName '8.0'
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
